# telegram-dashboard

./: .actrc  .coderabbit.yaml  .dockerignore  .env  .env.example  .envrc  .eslintrc.json  .gitattributes  .gitconfig  .gitignore  .mcp.json  .mise.toml  .npmrc  .pnpmfile.cjs  .pre-commit-config.yaml  AGENTS.md  BRANCH_AUDIT.md  COCOINDEX_GRAPHITI_QDRANT_SETUP_REPORT.md  CODEOWNERS  CONTRIBUTING.md  DEPLOY_HANDOVER.md  DOMAIN_CONNECTION_RUNBOOK.md  Dockerfile  FEATURES_30_PROPOSAL.md  MCP_GUIDE.md  MCP_V2_APPLY_GUIDE.md  MOBILE_OPTIMIZATIONS_SUMMARY.md  Makefile  NATIVE_APP.md  NICEGRAM_ANALYSIS.md  PROJECT_CONTEXT.md  README.md  TEAM_STATUS.md  TODO.json  UPGRADE_PLAN.md  WORKTREE_WORKFLOW.md  _db_check.py  admin_patch.py  admin_user_delete_patch.py  alembic.ini  (+70 more)
.claude/: settings.json
.git-rewrite/: backup-refs  index  message  parse  raw-refs  revs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: commit-msg  post-checkout  post-merge  pre-commit  pre-push
.kilo/: AGENTS_SHARED.md  DEVEL_SPEED.md  KILO_TIPS.md  kilo.jsonc  run-script.ps1
.kilocode/: memory.md
.playwright-mcp/: page-2026-07-21T15-05-21-081Z.yml  page-2026-07-21T15-05-41-939Z.yml  page-2026-07-21T15-06-07-534Z.yml  page-2026-07-21T15-25-16-725Z.yml  page-2026-07-21T15-25-30-021Z.yml  page-2026-07-21T15-25-54-959Z.yml  page-2026-07-21T23-10-55-084Z.yml
alembic/: README  env.py  script.py.mako
app/: config.py  main.py
backend/: README.md  account_runtime.py  admin_platform.py  auth_middleware.py  cryptomus.py  debug_free_api.py  event_bus.py  healing_engine.py  ip_rate_limiter.py  main.py  media.py  models.py  opentelemetry_setup.py  production_config.py  pyproject.toml  rate_limiter.py  requirements.txt  runtime_manager.py
backend/bot/: ai_employee.py  db.py  guest_engine.py  service.py  telegram_api.py
backend/routers/: accounts.py  admin.py  ai_admin.py  auth.py  auto_reply.py  broadcast.py  cryptomus_payments.py  draft_routes.py  folders.py  free_api_key.py  groups.py  guest_routes.py  healing.py  health.py  reply_macro.py  runtime_inspector.py  stars_payments.py  telegram_bot.py  trigger_routes.py
backend/tests/: _tmp_reply_macro_engine_test.db  test_ai_admin.py  test_ai_employee.py  test_auth_middleware.py  test_auto_reply.py  test_broadcast.py  test_broadcast_queue.py  test_cryptomus_payments.py  test_free_api_key.py  test_guest_engine.py  test_health.py  test_ip_rate_limiter.py  test_plan_period_enforcement.py  test_reply_macro_engine.py  test_security_p1.py  test_security_routes.py  test_service.py
docs/: ALEMBIC_CONVENTIONS.md  API_SYNC.md  BACKEND_INFRA.md  CI_OPTIMIZATION.md  ONBOARDING.md  PARALLEL_DEVELOPMENT.md  SECRET_ROTATION.md  TSC_WATCH.md  referral_api_contract.md  vps-connection-troubleshooting.md
e2e/: __init__.py  accounts.spec.ts  admin-auth.spec.ts  api-keys.spec.ts  auth.setup.ts  broadcast.spec.ts  core-flows.spec.ts  e2e_api_client.py  e2e_config.py  e2e_report.py  enterprise_report.json  enterprise_runner.py  helpers.ts  link-inspector.spec.ts  logs.spec.ts  mobile-qa.spec.ts  p0-fixes.spec.ts  prod-reply-macro.spec.ts  prod_reply_macro_test.py  public-only.spec.ts  qa_full_test.py  qa_report.json  qa_report.md  regression_backend.py  regression_test.py  report.json  run_docker_regression.py  run_e2e.py  test_healing_stress.py  test_performance.py  test_runtime.py  test_workspace.py  visual-regression.spec.ts
nginx/: performance.conf  telemon.conf
public/: manifest.json  (+1 more)
(+1117 files in other folders)
