[tool.ruff]
# Line length
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP", # pyupgrade
    "PL", # pylint
    "PT", # flake8-pytest-style
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]

# Avoid trying to fix whitespace-related violations
unfixable = ["W"]

[tool.ruff.lint.isort]
known-first-party = ["app", "backend", "telegram_dashboard_backend"]
known-third-party = ["fastapi", "uvicorn", "sqlalchemy", "alembic", "pydantic", "telethon", "cryptography", "apscheduler", "structlog", "pyjwt", "httpx", "twilio", "redis", "graphiti_core", "orjson"]

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"
# Like Black, indent with spaces, rather than tabs
indent-style = "space"
# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending
line-ending-style = "auto"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "telemon"
description = "TeleMon - Telegram Monitoring and Management Platform"
version = "1.0.0"
authors = [
    {name = "TeleMon Team"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "telethon>=1.36,<1.37",
    "python-telegram-bot>=21.6,<22.0",
    "cryptography>=43,<44",
    "pyjwt>=2.9,<2.10",
    "httpx>=0.27,<0.28",
    "twilio>=9.3,<10.0",
    "python-dotenv>=1.0,<2.0",
    "python-multipart>=0.0.12,<0.1",
    "apscheduler>=3.10,<3.11",
    "beautifulsoup4>=4.12,<5.0",
    "structlog>=24.4,<25.0",
    "pillow>=11,<13",
    "redis[hiredis]>=5.2,<6.0",
    "orjson>=3.9",
    "graphiti-core==0.29.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.0",
    "types-python-dateutil",
    "types-requests",
]

[tool.pytest.ini_options]
testpaths = ["tests", "telegram-dashboard-backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true