[project]
name = "telemon-backend"
version = "1.0.0"
description = "TeleMon Account Runtime Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "telethon>=1.39.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.17",
    "cryptography>=44.0.0",
    "aiosqlite>=0.20.0",
]

[tool.uv]
dev-dependencies = []
